--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,7 @@
     "transform-async-generator-functions",
     "transform-object-rest-spread",
     // stage 2
-    "transform-class-properties"
+    "transform-class-properties",
+    "inline-react-svg"
   ]
 }
